Added login with google as well as buttons to investment watchlist

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,12 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta
+      name="google-signin-client_id"
+      content="852618798203-a3fjcip3ngdqe76558ckjv00qkr517e3.apps.googleusercontent.com"
+    />
+    <title>Flow</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
